Change monitor background image to monitor-frame

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     .monitor{
       position:absolute;
       inset:0;
-      background: url("./monitor.png") center/contain no-repeat;
+      background: url("./monitor-frame.png") center/contain no-repeat;
       pointer-events:none;
       filter: drop-shadow(0 30px 55px rgba(0,0,0,.65));
     }
