--- a/index.html
+++ b/index.html
@@ -2,77 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>PU5C1VER5E</title>
-
   <style>
-    /* Page backdrop */
-    html, body{
-      height:100%;
+    :root{
+      /* These define where the SCREEN area sits on top of intro-bg.png.
+         We’ll tune these once, then everything (UFO, beams, Vimeo) lines up. */
+      --screen-left: 18%;
+      --screen-top: 21%;
+      --screen-w: 64%;
+      --screen-h: 60%;
+    }
+
+    html,body{height:100%;}
+    body{
       margin:0;
-      background:#000;
       display:grid;
       place-items:center;
+      background:#000;
     }
 
-    /* This is the "stage" that holds the monitor and the screen */
-    .monitorWrap{
+    .stage{
       position:relative;
-      width:min(980px, 92vw);
-      aspect-ratio: 1 / 1;
+      width:min(900px, 92vw);
+      aspect-ratio: 1 / 1; /* your intro image is basically square */
     }
 
-    /* Screen placement (tune these 4 values to match your monitor PNG) */
-    :root{
-      --screen-left: 14.5%;
-      --screen-top: 13.5%;
-      --screen-w: 71%;
-      --screen-h: 69%;
-      --screen-radius: 18px;
-    }
-
-    /* The glass area INSIDE the monitor */
-    .screen{
-      position:absolute;
-      left: var(--screen-left);
-      top: var(--screen-top);
-      width: var(--screen-w);
-      height: var(--screen-h);
-      border-radius: var(--screen-radius);
-      overflow:hidden;
-      z-index: 1;
-    }
-
-    /* The intro background image goes INSIDE the glass */
-    .screen .bg{
+    .intro-bg{
       position:absolute;
       inset:0;
       width:100%;
       height:100%;
-      object-fit: cover;
+      object-fit:contain;
       display:block;
+      filter: drop-shadow(0 30px 55px rgba(0,0,0,.65));
+      user-select:none;
+      -webkit-user-drag:none;
+      pointer-events:none;
     }
 
-    /* Monitor frame image sits ABOVE the glass */
-    .monitor{
+    /* This is the invisible “screen window” we’ll use for placing stuff */
+    .screen{
       position:absolute;
-      inset:0;
-      background: url("./monitor-frame.png") center/contain no-repeat;
-      pointer-events:none;
-      z-index: 2;
+      left:var(--screen-left);
+      top:var(--screen-top);
+      width:var(--screen-w);
+      height:var(--screen-h);
+      border-radius:10px;
+      overflow:hidden;
+      /* TEMP: visible outline so you can see what we’re aligning */
+      outline: 1px solid rgba(57,255,90,.25);
     }
   </style>
 </head>
 
 <body>
-  <div class="monitorWrap">
-    <div class="screen">
-      <img class="bg" src="./intro.bg.png" alt="">
-    </div>
-
-    <div class="monitor"></div>
+  <div class="stage">
+    <img class="intro-bg" src="./intro-bg.png" alt="" />
+    <div class="screen" id="screen"></div>
   </div>
 </body>
 </html>
 
-    
